--- a/style/style.css
+++ b/style/style.css
@@ -145,23 +145,30 @@ body {
   background-color: #f1f1f1;
   font-size: .4rem;
 }
+#load-mask>div {
+  position: absolute;
+  width: 100%;
+}
 #load-mask p {
-  margin: 0 auto;
+  position: absolute;
+  top: 40%;
+  margin-bottom: 30px;
+  box-sizing: border-box;
   padding: 20px;
-  width: 100px;
-  height: 100px;
-  line-height: 100px;
+  width: 100%;
+  height: 60px;
   text-align: center;
   color: #666;
 }
-#load-mask>div {
+#load-mask>div>div {
   position: relative;
   margin: 0 auto;
   width: 98px;
   height: 30px;
   text-align: center;
+  transform: translateY(90px);
 }
-#load-mask>div>span {
+#load-mask>div>div>span {
   position: absolute;
   margin-right: 3px;
   display: inline-block;
